1310, add project default country selection

--- a/src/app/features/rfq/review/review.component.html
+++ b/src/app/features/rfq/review/review.component.html
@@ -5,12 +5,13 @@
         <div class="col-md-12">
           <div class="row">
             <div class="col-xs-12 p-t-10">
-              <button mat-raised-button class="main-background-color main-button color-white pull-right float-rfq-btn" [disabled]="!form.valid">
+              <button mat-raised-button class="main-background-color main-button color-white pull-right float-rfq-btn"
+                [disabled]="!form.valid">
                 Float RFQ
               </button>
-              <span (click)="selectCurrency()" class="text-decoration-underline main-color pull-right font-size-vary-grn p-t-10 p-r-10 text-semi-bold cursor-pointer"
-                >Select Currency</span
-              >
+              <span (click)="selectCurrency()"
+                class="text-decoration-underline main-color pull-right font-size-vary-grn p-t-10 p-r-10 text-semi-bold cursor-pointer">Select
+                Currency</span>
             </div>
           </div>
           <!-- first row -->
@@ -34,7 +35,8 @@
               <mat-form-field class="border-input">
                 <mat-label>RFQ End Date*</mat-label>
                 <!-- <span class="form-placeholder">{{ form["controls"]["dueDate"].value | date: "dd-MMM-yyy" }}</span> -->
-                <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate" (click)="endDate.open()" readonly />
+                <input matInput [matDatepicker]="endDate" formControlName="dueDate" [min]="minDate"
+                  (click)="endDate.open()" readonly />
                 <mat-datepicker-toggle matSuffix [for]="endDate"></mat-datepicker-toggle>
                 <mat-datepicker #endDate startView="month" [startAt]="endDate"></mat-datepicker>
                 <!-- <small *ngIf="sameStartEndDate" class="error-msg"> End Date must be greater than Start Date </small> -->
@@ -51,24 +53,28 @@
                 </button>
               </div> -->
 
-            <div class="col-xs-3 p-l-0 p-t-20 p-b-20 text-right" *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null">
+            <div class="col-xs-3 p-l-0 p-t-20 p-b-20 text-right"
+              *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null">
               <span class="base-currency p-l-5 p-r-5 p-t-10 p-b-10">
                 <span class="font-size-vary-grn color-grey">
-                  <img width="25px" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyFlag" [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag" />
+                  <img width="25px" *ngIf="finalRfq.rfqCurrency.exchangeCurrencyFlag"
+                    [src]="finalRfq.rfqCurrency.exchangeCurrencyFlag" />
                   {{ finalRfq.rfqCurrency.exchangeCurrencyName }}
                 </span>
                 <span class="p-l-5"> = </span>
                 <span class="p-l-5 color-6d6a6a color-grey"> {{ finalRfq.rfqCurrency.exchangeValue }} </span>
                 <span class="p-l-5 color-grey">
-                  <img width="25px" *ngIf="finalRfq.rfqCurrency.primaryCurrencyFlag" [src]="finalRfq.rfqCurrency.primaryCurrencyFlag" />
+                  <img width="25px" *ngIf="finalRfq.rfqCurrency.primaryCurrencyFlag"
+                    [src]="finalRfq.rfqCurrency.primaryCurrencyFlag" />
                   {{ finalRfq.rfqCurrency.primaryCurrencyName }}
                 </span>
               </span>
               <div class="display-inline-block p-l-5">
-                <span *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null" class="info-icon info-tootip"
-                  ><img src="./../../../../assets/images/i_icon.png" class="img-responsive" />
-                  <span class="info-tootip__content">
-                    <div class="tooltip-table">
+                <span *ngIf="finalRfq.rfqCurrency != null && finalRfq.rfqCurrency.exchangeCurrencyName != null"
+                  class="info-icon info-tootip"><img src="./../../../../assets/images/i_icon.png"
+                    class="img-responsive" />
+                  <span class="info-tootip__content rt-0">
+                    <div class="tooltip-table ml-0">
                       <div class="row text-center color-grey text-semi-bold">
                         Supplier will have to submit the quote in this selected currency
                       </div>
@@ -111,8 +117,7 @@
           </div>
         </div>
       </div>
-      <mat-card class="m-b-10 p-b-10" *ngIf="this.finalRfq.terms"
-        >Payment Terms:
+      <mat-card class="m-b-10 p-b-10" *ngIf="this.finalRfq.terms">Payment Terms:
         <span classs="p-l-15">
           {{ this.finalRfq.terms.termsDesc.trim() === "Others" ? this.finalRfq.terms.otherDesc : this.finalRfq.terms.termsDesc }}
         </span>
