--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -61,6 +61,7 @@
         [poTableData]="tableData"
         [purchaseOrderCurrency]="currency"
         [additionalOtherCostInfo]="additionalOtherCost"
+        [poData]="poData"
       >
       </app-po-table>
     </div>
