--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="sign-in-up">
     <div class="row m-0">
         <div class="d-none d-sm-block col-md-12 col-lg-8 pl-0">
             <div class="min-height">
@@ -30,12 +30,13 @@
                 </mat-tab-group>
 
                 <div class="row text-align-center three-months-signup-text">
-                     <div class="col-sm-12 p-t-5 p-b-15">
+                    <div class="col-sm-12 p-t-5 p-b-15">
                         <div class="font-signup">
-                            You will be charged a monthly subscription fee of INR 9999 after your three months free trial period ends. <br>
+                            You will be charged a monthly subscription fee of INR 9999 after your three months free
+                            trial period ends. <br>
                             This is an introductory offer for the first year of your purchase only.
                         </div>
-                         <!-- <div class="font-size16 p-l-5 p-r-5"> </div> -->
+                        <!-- <div class="font-size16 p-l-5 p-r-5"> </div> -->
                     </div>
                 </div>
 
